--- a/index.html
+++ b/index.html
@@ -214,13 +214,15 @@
             <img src="assets/images/laura-abowd-profile.jpg" class="profile-img" alt="">
           </div>
           <!--   <h6 class=text-6> Howdy!</h6> -->
-          <p class="about-me">
-            I'm Laura, a former public school teacher with over ten years experience in the classroom. I am super passionate about helping others and want to create positive experiences for people through design and technology that solves real-world needs.
-            <br><br>
-            I started my journey into programming taking night courses at my local community college. After learning the basics and succesfully designing and prototyping mobile applications, I enrolled in a full-time coding program in Tokyo, Japan.
-            <br><br>
-            I am continuing my development by yada yada and, of course, eating lots of Spam for breakfast.
-          </p>
+          <div class="about-me">
+            <p>I'm Laura, a former public school teacher with over ten years experience in the classroom. I am super passionate about helping others and want to create positive experiences for people through design and technology that solves real-world needs. </p>
+            <p>
+              I started my journey into programming taking night courses at my local community college. After learning the basics and succesfully designing and prototyping two mobile applications, I enrolled in a full-time coding program in Tokyo, Japan.
+            </p>
+            <p>
+              Outside of improving my development skills, I enjoy running, reading, tending to my houseplants, and of course, eating lots of Spam for breakfast.
+            </p>
+          </div>
         </div>
       </div>
       <!--   projects -->
@@ -231,12 +233,11 @@
             <h5>Classy</h5>
             <p>An app dedicated to helping educators create and manage their class lists.</p>
           </div>
-          <!--     bootstrap image carousel -->
+          <!--    CLassy  bootstrap image carousel -->
           <div class="project-card">
             <div id="carouselExampleControls" class="carousel slide carousel-container" data-interval="false">
-             <!--  replace data-ride="carousel" with  data-interval="false"  -->
+              <!--  replace data-ride="carousel" with  data-interval="false"  -->
               <div class="carousel-inner">
-
                 <div class="carousel-item active item carousel-image">
                   <img src="assets/images/laura-abowd-classy-1.png" class="d-block w-100" alt="...">
                 </div>
@@ -248,11 +249,18 @@
                 </div>
               </div>
               <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span aria-hidden="true"><svg class="arrow-prev" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <circle cx="10" cy="10" r="9.5" transform="rotate(-180 10 10)" fill="white" stroke="#001640" />
+                    <path d="M4.14645 9.64645C3.95118 9.84171 3.95118 10.1583 4.14645 10.3536L7.32843 13.5355C7.52369 13.7308 7.84027 13.7308 8.03553 13.5355C8.2308 13.3403 8.2308 13.0237 8.03553 12.8284L5.20711 10L8.03553 7.17157C8.2308 6.97631 8.2308 6.65973 8.03553 6.46447C7.84027 6.2692 7.52369 6.2692 7.32843 6.46447L4.14645 9.64645ZM16 9.5L4.5 9.5L4.5 10.5L16 10.5L16 9.5Z" fill="#001640" />
+                  </svg>
+                </span>
                 <span class="sr-only">Previous</span>
               </a>
               <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span aria-hidden="true"> <svg class="arrow-next" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <circle cx="10" cy="10" r="9.5" fill="white" stroke="#001640" />
+                    <path d="M15.8536 10.3536C16.0488 10.1583 16.0488 9.84171 15.8536 9.64645L12.6716 6.46447C12.4763 6.2692 12.1597 6.2692 11.9645 6.46447C11.7692 6.65973 11.7692 6.97631 11.9645 7.17157L14.7929 10L11.9645 12.8284C11.7692 13.0237 11.7692 13.3403 11.9645 13.5355C12.1597 13.7308 12.4763 13.7308 12.6716 13.5355L15.8536 10.3536ZM4 10.5H15.5V9.5H4V10.5Z" fill="#001640" />
+                  </svg></span>
                 <span class="sr-only">Next</span>
               </a>
             </div>
@@ -280,8 +288,7 @@
           <div class="">Two Weeks</div>
         </div>
       </div>
-
-<!--       Japan Cycle project  -->
+      <!--       Japan Cycle project  -->
       <div class="body-container">
         <div class="project-container">
           <!--   Japan Cycle  bootstrap image carousel -->
@@ -302,11 +309,17 @@
                 </div>
               </div>
               <a class="carousel-control-prev" href="#carousel-two" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span aria-hidden="true"><svg class="arrow-prev" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <circle cx="10" cy="10" r="9.5" transform="rotate(-180 10 10)" fill="white" stroke="#001640" />
+                    <path d="M4.14645 9.64645C3.95118 9.84171 3.95118 10.1583 4.14645 10.3536L7.32843 13.5355C7.52369 13.7308 7.84027 13.7308 8.03553 13.5355C8.2308 13.3403 8.2308 13.0237 8.03553 12.8284L5.20711 10L8.03553 7.17157C8.2308 6.97631 8.2308 6.65973 8.03553 6.46447C7.84027 6.2692 7.52369 6.2692 7.32843 6.46447L4.14645 9.64645ZM16 9.5L4.5 9.5L4.5 10.5L16 10.5L16 9.5Z" fill="#001640" />
+                  </svg></span>
                 <span class="sr-only">Previous</span>
               </a>
               <a class="carousel-control-next" href="#carousel-two" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span aria-hidden="true"><svg class="arrow-next" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <circle cx="10" cy="10" r="9.5" fill="white" stroke="#001640" />
+                    <path d="M15.8536 10.3536C16.0488 10.1583 16.0488 9.84171 15.8536 9.64645L12.6716 6.46447C12.4763 6.2692 12.1597 6.2692 11.9645 6.46447C11.7692 6.65973 11.7692 6.97631 11.9645 7.17157L14.7929 10L11.9645 12.8284C11.7692 13.0237 11.7692 13.3403 11.9645 13.5355C12.1597 13.7308 12.4763 13.7308 12.6716 13.5355L15.8536 10.3536ZM4 10.5H15.5V9.5H4V10.5Z" fill="#001640" />
+                  </svg></span>
                 <span class="sr-only">Next</span>
               </a>
             </div>
@@ -339,57 +352,62 @@
         </div>
       </div>
       <div class="project-container">
-          <div class="project-information">
-            <h5>Carebook</h5>
-            <p>An app dedicated to helping educators create and manage their class lists.</p>
-          </div>
-          <!--   Carebook  bootstrap image carousel -->
-          <div class="project-card">
-            <div id="carousel-three" class="carousel slide carousel-container" data-interval="false">
-             <!--  replace data-ride="carousel" with  data-interval="false"  -->
-              <div class="carousel-inner carebook-carousel">
-
-                <div class="carousel-item active item carousel-image">
-                  <img src="assets/images/laura-abowd-carebook-1.png" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item item carousel-image">
-                  <img src="assets/images/laura-abowd-carebook-2.png" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item item carousel-image">
-                  <img src="assets/images/laura-abowd-carebook-3.png" class="d-block w-100" alt="...">
-                </div>
+        <div class="project-information">
+          <h5>Carebook</h5>
+          <p>A mobile app dedicated to helping users set reminders for medical appoinments.</p>
+        </div>
+        <!--   Carebook  bootstrap image carousel -->
+        <div class="project-card">
+          <div id="carousel-three" class="carousel slide carousel-container" data-interval="false">
+            <!--  replace data-ride="carousel" with  data-interval="false"  -->
+            <div class="carousel-inner carebook-carousel">
+              <div class="carousel-item active item carousel-image">
+                <img src="assets/images/laura-abowd-carebook-1.png" class="d-block w-100" alt="...">
               </div>
-              <a class="carousel-control-prev" href="#carousel-three" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#carousel-three" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
+              <div class="carousel-item item carousel-image">
+                <img src="assets/images/laura-abowd-carebook-2.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item item carousel-image">
+                <img src="assets/images/laura-abowd-carebook-3.png" class="d-block w-100" alt="...">
+              </div>
             </div>
+            <a class="carousel-control-prev" href="#carousel-three" role="button" data-slide="prev">
+              <span aria-hidden="true"><svg class="arrow-prev" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <circle cx="10" cy="10" r="9.5" transform="rotate(-180 10 10)" fill="white" stroke="#001640" />
+                  <path d="M4.14645 9.64645C3.95118 9.84171 3.95118 10.1583 4.14645 10.3536L7.32843 13.5355C7.52369 13.7308 7.84027 13.7308 8.03553 13.5355C8.2308 13.3403 8.2308 13.0237 8.03553 12.8284L5.20711 10L8.03553 7.17157C8.2308 6.97631 8.2308 6.65973 8.03553 6.46447C7.84027 6.2692 7.52369 6.2692 7.32843 6.46447L4.14645 9.64645ZM16 9.5L4.5 9.5L4.5 10.5L16 10.5L16 9.5Z" fill="#001640" />
+                </svg></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carousel-three" role="button" data-slide="next">
+              <span aria-hidden="true"><svg class="arrow-next" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <circle cx="10" cy="10" r="9.5" fill="white" stroke="#001640" />
+                  <path d="M15.8536 10.3536C16.0488 10.1583 16.0488 9.84171 15.8536 9.64645L12.6716 6.46447C12.4763 6.2692 12.1597 6.2692 11.9645 6.46447C11.7692 6.65973 11.7692 6.97631 11.9645 7.17157L14.7929 10L11.9645 12.8284C11.7692 13.0237 11.7692 13.3403 11.9645 13.5355C12.1597 13.7308 12.4763 13.7308 12.6716 13.5355L15.8536 10.3536ZM4 10.5H15.5V9.5H4V10.5Z" fill="#001640" />
+                </svg></span>
+              <span class="sr-only">Next</span>
+            </a>
           </div>
         </div>
-                <div class="project-details-container">
-          <div class="project-details">
-            <p>My Role</p>
-          </div>
-          <div class="project-details">
-            <p>Tools</p>
-          </div>
-          <div class="project-details">
-            <p>Timeline</p>
-          </div>
-          <div class="">Product Lead, UX Designer, Front-End Developer</div>
-          <div class="">
-            <ul>
-              <li>Ruby on Rails</li>
-              <li>Figma</li>
-              <li>Github</li>
-            </ul>
-          </div>
-          <div class="">Two Weeks</div>
+      </div>
+      <div class="project-details-container">
+        <div class="project-details">
+          <p>My Role</p>
         </div>
+        <div class="project-details">
+          <p>Tools</p>
+        </div>
+        <div class="project-details">
+          <p>Timeline</p>
+        </div>
+        <div class="">UX Designer, Prototyper, Developer</div>
+        <div class="">
+          <ul>
+            <li>Figma</li>
+            <li>Swift</li>
+            <li>Xocde</li>
+          </ul>
+        </div>
+        <div class="">Eight weeks</div>
+      </div>
       <div class="body-container">
         <h2>Why the Spam?</h2>
         <p id="p-container">
@@ -397,9 +415,21 @@
         </p>
       </div>
     </div>
-    <footer id="footer">
-      <h2>Contact</h2>
-
+    <footer>
+      <h2 id="contact-me-header">Contact Me</h2>
+      <span  >
+        <svg width="19" height="15" viewBox="0 0 19 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M17.0672 0.666504H2.66719C1.67719 0.666504 0.876187 1.44483 0.876187 2.39611L0.867188 12.7738C0.867188 13.725 1.67719 14.5034 2.66719 14.5034H17.0672C18.0572 14.5034 18.8672 13.725 18.8672 12.7738V2.39611C18.8672 1.44483 18.0572 0.666504 17.0672 0.666504ZM16.7072 4.34192L10.3442 8.16436C10.0562 8.33732 9.67819 8.33732 9.39019 8.16436L3.02719 4.34192C2.80219 4.20355 2.66719 3.97006 2.66719 3.71926C2.66719 3.13984 3.32419 2.79392 3.83719 3.0966L9.86719 6.72013L15.8972 3.0966C16.4102 2.79392 17.0672 3.13984 17.0672 3.71926C17.0672 3.97006 16.9322 4.20355 16.7072 4.34192Z" fill="#001640" />
+        </svg>
+      </span>
+      <a href="mailto:laura.abowd@gmail.com">laura.abowd@gmail.com</a>
+      <span class="color-separator"> | </span>
+      <span>
+        <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd" d="M2 0C0.895431 0 0 0.895431 0 2V15.2961C0 16.4007 0.89543 17.2961 2 17.2961H16C17.1046 17.2961 18 16.4007 18 15.2961V2C18 0.895431 17.1046 0 16 0H2ZM5.37529 3.24288C4.67432 3.24288 4.32384 3.55747 4.32384 4.18665C4.32384 4.82005 4.67432 5.13675 5.37529 5.13675C5.72577 5.13675 5.98757 5.05441 6.1607 4.88972C6.33806 4.72082 6.42673 4.48646 6.42673 4.18665C6.42673 3.55747 6.07625 3.24288 5.37529 3.24288ZM4.40618 13.0986H6.33806V6.01718H4.40618V13.0986ZM12.7167 13.0986H14.6485V8.48111C14.6485 7.6408 14.4353 6.99895 14.0088 6.55557C13.5823 6.10797 12.9574 5.88416 12.1339 5.88416C11.6526 5.88416 11.2218 5.97284 10.8418 6.15019C10.466 6.32332 10.1704 6.58091 9.95503 6.92294H9.84736L9.58766 6.01718H8.11183V13.0986H10.0437V9.76692C10.0437 8.93083 10.1641 8.33332 10.4047 7.97439C10.6454 7.61124 11.036 7.42966 11.5765 7.42966C11.9735 7.42966 12.2627 7.55846 12.4443 7.81604C12.6259 8.0694 12.7167 8.45155 12.7167 8.9625V13.0986Z" fill="#001640" />
+        </svg>
+      </span>
+      <a href="https://www.linkedin.com/in/laura-abowd/">linkedin.com/in/laura-abowd</a>
     </footer>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
